Fix spacing for streams

--- a/src/App.css
+++ b/src/App.css
@@ -12,8 +12,8 @@
 }
 
 .rectangle-15 {
-  height: 165px;
-  width: 165px;
+  height: 150px;
+  width: 150px;
 }
 
 .line-2 {
